# volter-bench

./: .gitignore  README.md  slack_report.py  streamlit_app.py  update_metric.py
data/bench_one_shot/2024-10-16-10-41-22/: results.csv
data/bench_one_shot/2024-10-16-12-05-51/: results.csv
data/bench_one_shot/2024-10-16-12-13-59/: results.csv
data/bench_one_shot/2024-10-16-12-59-10/: results.csv
data/bench_one_shot_core/: 2024-09-17-11-50-04.csv  bench_one_shot_core_2024-09-11-02-06-21.csv
data/bench_one_shot_core/2024-09-17-17-04-26/: results.csv
data/bench_one_shot_core/2024-09-19-10-32-39/: results.csv
data/bench_one_shot_core/2024-10-03-14-06-46/: results.csv
data/bench_one_shot_core/2024-10-05-13-04-41/: results.csv
data/bench_one_shot_view/: 2024-09-15-16-15-14.csv  2024-09-16-18-11-47.csv  2024-09-17-12-19-04.csv  2024-09-17-12-40-00.csv  2024-09-17-13-14-20.csv  2024-09-17-13-17-09.csv  bench_one_shot_view_2024-09-15-15-17-54.csv
data/bench_one_shot_view/andrew-volter_bench_3/2024-10-22-21-26-18/ladder/creature_battler_05_3/main_game/docs/: overview.md  pyproject.toml
data/bench_one_shot_view/andrew-volter_bench_3/2024-10-22-21-26-18/ladder/creature_battler_05_3/main_game/docs/assets/things/: prompting.json
data/bench_one_shot_view/andrew-volter_bench_3/2024-10-22-21-26-18/ladder/creature_battler_05_3/main_game/docs/models/: player.md
src/: calculations.py  data_loader.py  github_utils.py  visualizations.py
src/tabs/: agent_performance_tab.py  leaderboard_tab.py  raw_data_tab.py  run_details_tab.py
(+68044 files in other folders)
