[tool.poetry]
name = "creature_battler_05_1"
version = "0.1.0"
description = ""
authors = ["Dirk Brand <dirk@volter.ai>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.6.2"
beautifulsoup4 = "^4.12.3"
flask-cors = "^4.0.0"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
tabulate = "^0.9.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
pillow = "^10.2.0"
aiohttp = "3.10.6"
numpy = "^1.26.4"
redis = "^5.0.3"
prompt-toolkit = "^3.0.43"
pyhumps = "3.8.0"
cookiecutter = "^2.6.0"
networkx = "^3.3"
pydantic-settings = "^2.3.4"
colorama = "^0.4.6"

[[tool.poetry.source]]
name = "codeartifact"
url = "https://volter-533267259204.d.codeartifact.us-west-2.amazonaws.com/pypi/volter-pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
